--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<title>Olá Mundo</title>
-
 </head>
+
 <body>
 	<h1>Olá Mundo</h1>
+	<h2>Este código foi escrito em HTML</h2>
 </body>
 
 </html>
