Update index.html remoto

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 	<h1>Olá Mundo</h1>
 	<h2>Este código foi escrito em HTML</h2>
+	<h3>Agora atualizamos o repositório remoto</h3>
 </body>
 
 </html>
